# kth-dd2323-project

./: Cargo.toml  README.md  config.txt
assets/: grass.glb  pond.glb  pond0.glb  pond1.glb  pond2.glb
assets/green_city/: building0.glb  building1.glb  building2.glb  building3.glb  building4.glb  forest.glb  grass.glb  tiles_config.txt
assets/oasis/: palm.glb  sand.glb  tiles_config.txt  water2inner.glb  water3.glb  water3outer.glb  water4.glb
assets/test/: grass.glb  tiles_config.txt
examples/: shader.wgsl  wgpu_example.rs
resources/: test_model.glb
src/: camera.rs  controls.rs  lib.rs  main.rs  model_loader.rs  raster.rs  renderer.rs  scene.rs  tile.rs  tile_data.rs  wave_function_collapse.rs
src/renderers/: mod.rs  raster_renderer.rs  raytracing_renderer.rs  renderer.rs  shader.wgsl
