[package]
name = "kth-dd2323-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]


[dependencies]
nalgebra = "0.32.4"
derive_more = "0.99.11"
sdl2 = { version = "0.36.0", default-features = false }
rayon = "1.10.0"
once_cell = "1.19.0"
easy-gltf = "1.1.2"
cgmath = "0.18.0"
anyhow = "1.0.82"
rand = "0.8.5"
wgpu = { version = "0.20.0", features = [] }
winit = { version = "0.30.0", features = [] }
bytemuck = { version = "1.15.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
pollster = "0.3.0"

[profile.dev]
opt-level = 3
debug = true
split-debuginfo = '...' # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
